--- a/Live_Speech.ipynb
+++ b/Live_Speech.ipynb
@@ -56,6 +56,7 @@
         "! pip install numba==0.48\n",
         "\n",
         "# データのダウンロード\n",
+        "! pip install --upgrade gdown\n",
         "import gdown\n",
         "gdown.download('https://drive.google.com/uc?id=1L869kfYC5MK4UPfA30oDZvtUioHrh6Li', './live.zip', quiet=False)\n",
         "! unzip live.zip -d data"
